@@ -1,20 +1,24 @@
 
 '''
 #
-# TR11107
-#
 # Report:
 #
-# Usage:
-#       GXD_FullCodeableIndexed.py
+# Full-coded data only from large scale screens
+#
+#       J# for Large scale screens:
+#       J:101679 J:122989 J:140465 J:141291 J:143778 J:153498 J:157819 J:162220 J:171409
+#       J:215487 J:226028 J:228563 J:279207 J:46439 J:80501 J:80502 J:85124 J:91257 J:93300
+#
+#       List all markers in these J# 
+#
+#       MGI ID of marker gene symbol
+#
+#       For each marker list the number of papers: indexed, fullcoded
 #
 # History:
 #
-# sc 01/28/2014
-#	- TR11347 remove DO column
-#
-# lec	08/06/2012
-#	- copied from GXD_FullCodeable.py
+# lec	09/01/2023
+#	- wts2-1268/2 new GXD QC reports for fullcoding priority
 #
 '''
 
@@ -30,7 +34,16 @@ SPACE = reportlib.SPACE
 TAB = reportlib.TAB
 PAGE = reportlib.PAGE
 
-fp = reportlib.init(sys.argv[0], 'Indexed-Full-Coded gene list', outputdir = os.environ['QCOUTPUTDIR'])
+fp = reportlib.init(sys.argv[0], 'Full-coded data only from large scale screens', outputdir = os.environ['QCOUTPUTDIR'])
+
+fp.write('''
+        J# for Large scale screens:
+        J:101679 J:122989 J:140465 J:141291 J:143778 J:153498 J:157819 J:162220 J:171409
+        J:215487 J:226028 J:228563 J:279207 J:46439 J:80501 J:80502 J:85124 J:91257 J:93300
+
+        For each marker list the number of papers: indexed, fullcoded
+
+''')
 
 fp.write(str.ljust('acc id', 25))
 fp.write(SPACE)
@@ -46,10 +59,17 @@ fp.write(CRT*2)
 # count: all genes in the GXD index
 #
 db.sql('''
-        select _Marker_key, count(*) as idx_count 
+        select g._Marker_key, count(*) as idx_count 
         into temporary table indexcount
-        from GXD_Index
-        group by _Marker_key
+        from GXD_Index g, BIB_Citation_Cache c
+        where c.jnumid in (
+        'J:101679', 'J:122989', 'J:140465', 'J:141291', 'J:143778',
+        'J:153498', 'J:157819', 'J:162220', 'J:17140', 'J:215487',
+        'J:226028', 'J:228563', 'J:279207', 'J:46439', 'J:80501',
+        'J:80502', 'J:85124', 'J:91257', 'J:93300'
+        )
+        and c._refs_key = g._refs_key
+        group by g._Marker_key
         ''', None)
 db.sql('create index indexed_idx1 on indexcount(_Marker_key)', None)
 
@@ -107,7 +127,9 @@ for r in results:
         fp.write(str.ljust(str(len(fullcodedrecords[key])), 20))
     else:
         fp.write(str.ljust('0', 20))
+
     fp.write(CRT)
         
 fp.write('\n(%d rows affected)\n' % (len(results)))
 reportlib.finish_nonps(fp)
+
