@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-22-??
+DATE: 09/01/2023
+STAFF: lec
+wts2-1268/fl2503/2 new GXD QC reports for fullcoding priority
+#       new file:   monthly/GXD_FullCodeableLargeScale.py
+
 TAG: qcreports_db-6-0-22-54
 DATE: 07/11/2023
 STAFF: lec
